[gd_scene load_steps=3 format=2]

[ext_resource path="res://Start.gd" type="Script" id=1]
[ext_resource path="res://resources/sprites/logo.png" type="Texture" id=2]

[node name="Server_browser" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background_panel" type="Panel" parent="."]
self_modulate = Color( 0.756863, 0.698039, 1, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Create_server" type="Button" parent="Background_panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -170.0
margin_top = 99.0
margin_right = 114.0
margin_bottom = 145.0
rect_scale = Vector2( 1.0065, 1 )
rect_pivot_offset = Vector2( -424.804, -261 )
text = "HOST"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Join_server" type="Button" parent="Background_panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 69.0
margin_top = 170.0
margin_right = 116.0
margin_bottom = 216.0
text = "JOIN"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerName" type="LineEdit" parent="Background_panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -171.0
margin_top = -13.0
margin_right = 116.0
margin_bottom = 34.0
rect_pivot_offset = Vector2( 167.604, 291.701 )
hint_tooltip = "ENTER IP ADDRESS"
placeholder_text = "Name"
placeholder_alpha = 0.665
caret_blink = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Background_panel/PlayerName"]
margin_top = -23.0
margin_right = 42.0
margin_bottom = -9.0
text = "Name:"

[node name="Server_ip" type="LineEdit" parent="Background_panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -167.0
margin_top = 170.0
margin_right = 48.0
margin_bottom = 216.0
rect_pivot_offset = Vector2( 167.604, 291.701 )
hint_tooltip = "ENTER IP ADDRESS"
placeholder_text = "ENTER IP ADDRESS"
placeholder_alpha = 0.665
caret_blink = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Logo" type="Sprite" parent="Background_panel"]
position = Vector2( 871.793, 156.65 )
rotation = 0.505858
scale = Vector2( 1.34211, 1.34211 )
texture = ExtResource( 2 )
offset = Vector2( -246.387, 79.6241 )

[node name="Lobby" type="Panel" parent="."]
visible = false
anchor_right = 0.273
anchor_bottom = 1.0
margin_right = 744.448
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Start_server" type="Button" parent="Lobby"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 230.0
margin_top = 189.0
margin_right = 471.0
margin_bottom = 264.0
rect_scale = Vector2( 1.0065, 1 )
rect_pivot_offset = Vector2( -424.804, -261 )
text = "START"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayersTitle" type="Label" parent="Lobby"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 5.0
margin_top = -255.0
margin_bottom = -220.0
text = "Players"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Logo" type="Sprite" parent="Lobby"]
position = Vector2( 1032, 193 )
rotation = 0.505858
scale = Vector2( 1.34211, 1.34211 )
texture = ExtResource( 2 )
offset = Vector2( -246.387, 79.6241 )

[node name="Players" type="Control" parent="Lobby"]
margin_left = 25.0
margin_top = 87.0
margin_right = 375.0
margin_bottom = 577.0
rect_scale = Vector2( 1.00758, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Background_panel/Create_server" to="." method="_on_Create_server_pressed"]
[connection signal="pressed" from="Background_panel/Join_server" to="." method="_on_Join_server_pressed"]
[connection signal="pressed" from="Lobby/Start_server" to="." method="_on_Start_server_pressed"]
